--- a/SeleniumFrameworkDesign/test-output/old/Default suite/methods.html
+++ b/SeleniumFrameworkDesign/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92dae4">  <td>22/09/09 23:45:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidations.submitOrder()[pri:0, instance:rahulshettyacademy.tests.ErrorValidations@783a467b]">submitOrder</td> 
-  <td>main@205721196</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/09 23:45:05</td>   <td>495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.ErrorValidations@783a467b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@205721196</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/09 23:45:01</td>   <td>-3417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidations@783a467b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@205721196</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>22/09/10 21:36:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>22/09/10 21:36:46</td>   <td>2783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>22/09/10 21:36:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>22/09/10 21:36:45</td>   <td>2093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.orderHistoryTest()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">orderHistoryTest</td> 
+  <td>main@1823541245</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>22/09/10 21:36:46</td>   <td>2783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>22/09/10 21:36:28</td>   <td>-14764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">submitOrder</td> 
+  <td>main@1823541245</td>   <td></td> </tr>
 </table>
