--- a/SeleniumFrameworkDesign/test-output/old/Suite/classes.html
+++ b/SeleniumFrameworkDesign/test-output/old/Suite/classes.html
@@ -4,36 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>rahulshettyacademy.tests.SubmitOrderTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>submitOrder</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>launchApplication</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>rahulshettyacademy.tests.ErrorValidationsTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -45,8 +15,9 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>submitOrder</td>
-<td>&nbsp;</td></tr>
+<td>LoginErrorValidation</td>
+<td>ErrorHandling </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -60,10 +31,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
