--- a/SeleniumFrameworkDesign/test-output/old/Suite/methods.html
+++ b/SeleniumFrameworkDesign/test-output/old/Suite/methods.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 00:43:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@783a467b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>22/09/10 00:43:10</td>   <td>-14579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@783a467b]">submitOrder</td> 
-  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 00:43:07</td>   <td>-17961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@783a467b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 00:43:43</td>   <td>18636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@74e28667]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="d1dc96">  <td>22/09/10 00:43:26</td>   <td>1816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.productErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@74e28667]">productErrorValidation</td> 
-  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 00:43:40</td>   <td>15493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@74e28667]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 00:43:40</td>   <td>15493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@74e28667]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="d1dc96">  <td>22/09/10 00:43:43</td>   <td>18243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.submitOrder()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@74e28667]">submitOrder</td> 
-  <td>main@1551945522</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 00:43:43</td>   <td>18636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@74e28667]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="8685fd">  <td>22/09/11 00:06:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@75437611]">LoginErrorValidation</td> 
+  <td>TestNG-tests-2@899543194</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>22/09/11 00:06:48</td>   <td>-9744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@75437611]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@899543194</td>   <td></td> </tr>
 </table>
