--- a/SeleniumFrameworkDesign/test-output/old/Suite/groups.html
+++ b/SeleniumFrameworkDesign/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>ErrorHandling</td><td>ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@75437611]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Purchase</td><td>SubmitOrderTest.submitOrder(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@65c7a252]<br/></td></tr>
 </table>
