--- a/SeleniumFrameworkDesign/test-output/old/Suite/methods-alphabetical.html
+++ b/SeleniumFrameworkDesign/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8685fd">  <td>22/09/11 00:06:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@75437611]">LoginErrorValidation</td> 
-  <td>TestNG-tests-2@899543194</td>   <td></td> </tr>
-<tr bgcolor="f176b8">  <td>22/09/11 00:06:48</td>   <td>-9744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@75437611]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@899543194</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>22/09/11 00:35:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@65c7a252]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>22/09/11 00:35:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@65c7a252]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
+<tr bgcolor="6afff2">  <td>22/09/11 00:35:06</td>   <td>4297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@65c7a252]">submitOrder</td> 
+  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
+<tr bgcolor="6afff2">  <td>22/09/11 00:35:06</td>   <td>4297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@65c7a252]">submitOrder</td> 
+  <td>TestNG-tests-1@1396431506</td>   <td></td> </tr>
 </table>
