Extent Reports and TestNG Listeners

--- a/SeleniumFrameworkDesign/test-output/old/Suite/methods.html
+++ b/SeleniumFrameworkDesign/test-output/old/Suite/methods.html
@@ -1,12 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6afff2">  <td>22/09/11 16:30:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder(java.util.HashMap)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@38cee291]">submitOrder</td> 
-  <td>TestNG-tests-1@1391624125</td>   <td></td> </tr>
-<tr bgcolor="f176b8">  <td>22/09/11 16:30:15</td>   <td>-4445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@38cee291]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1391624125</td>   <td></td> </tr>
-<tr bgcolor="6afff2">  <td>22/09/11 16:30:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder(java.util.HashMap)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@38cee291]">submitOrder</td> 
-  <td>TestNG-tests-1@1391624125</td>   <td></td> </tr>
-<tr bgcolor="f176b8">  <td>22/09/11 16:30:15</td>   <td>-4445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@38cee291]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1391624125</td>   <td></td> </tr>
+<tr bgcolor="6d7c83">  <td>22/09/14 12:15:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder(java.util.HashMap)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">submitOrder</td> 
+  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:16:09</td>   <td>19375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:16:09</td>   <td>19375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:16:06</td>   <td>15459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:16:06</td>   <td>15459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:16:06</td>   <td>15459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:16:09</td>   <td>19375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="6d7c83">  <td>22/09/14 12:15:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder(java.util.HashMap)[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">submitOrder</td> 
+  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="6d7c83">  <td>22/09/14 12:16:09</td>   <td>18433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.orderHistoryTest()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@41e68d87]">orderHistoryTest</td> 
+  <td>TestNG-tests-1@1638435724</td>   <td></td> </tr>
+<tr bgcolor="98e79a">  <td>22/09/14 12:15:39</td>   <td>-10749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.productErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">productErrorValidation</td> 
+  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:15:42</td>   <td>-8446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:15:37</td>   <td>-12780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:15:37</td>   <td>-12780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:15:42</td>   <td>-8446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:15:37</td>   <td>-12780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="98e79a">  <td>22/09/14 12:15:36</td>   <td>-13732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">LoginErrorValidation</td> 
+  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="b7a4e0">  <td>22/09/14 12:15:42</td>   <td>-8446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
+<tr bgcolor="98e79a">  <td>22/09/14 12:15:36</td>   <td>-13732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:rahulshettyacademy.tests.ErrorValidationsTest@21a21c64]">LoginErrorValidation</td> 
+  <td>TestNG-tests-2@1059524106</td>   <td></td> </tr>
 </table>
