--- a/SeleniumFrameworkDesign/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumFrameworkDesign/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 21:36:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 21:36:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>22/09/10 21:36:45</td>   <td>2093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.orderHistoryTest()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">orderHistoryTest</td> 
-  <td>main@1823541245</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>22/09/10 21:36:28</td>   <td>-14764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.submitOrder()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">submitOrder</td> 
-  <td>main@1823541245</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 21:36:46</td>   <td>2783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>22/09/10 21:36:46</td>   <td>2783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:rahulshettyacademy.tests.SubmitOrderTest@771a660]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1823541245</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>22/09/16 17:12:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.TestNGTestRunner@3a7442c7]">runScenario</td> 
+  <td>main@370475881</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>22/09/16 17:11:59</td>   <td>-760</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:cucumber.TestNGTestRunner@3a7442c7]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
+<tr bgcolor="bd6f9b">  <td>22/09/16 17:12:19</td>   <td>19085</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:cucumber.TestNGTestRunner@3a7442c7]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
 </table>
